--- a/documents/Final Report/Gloss.tex
+++ b/documents/Final Report/Gloss.tex
@@ -22,6 +22,12 @@
 	description={the SI unit of illuminance, measured by \gls{flux} per unit area. Equivalent to $lumens/m^2$}
 }
 
+\newglossaryentry{solar}
+{
+	name=solar irradiance spectrum,
+	description={the spectrum output by the sun as measured from the surface of the earth}
+}
+
 
 \newacronym{pcbs}{PCBs}{Printed Circuit Boards} 
 
@@ -36,3 +42,15 @@
 \newacronym{night}{NX}{night}
 
 \newacronym{spd}{SPD}{Spectral Power Density}
+
+\newacronym{sam}{SAM}{Spectral Angle Mapper}
+
+\newacronym{cri}{CRI}{Colour Rendering Index}
+
+\newacronym{s}{S}{Short-Wavelength}
+
+\newacronym{m}{M}{Medium-Wavelength}
+
+\newacronym{l}{L}{Long-Wavelength}
+
+\newacronym{iprgc}{ipRGC}{intrinsically photosensitive Retinal Ganglion Cells}
