--- a/documents/Final Report/LitReview.tex
+++ b/documents/Final Report/LitReview.tex
@@ -80,11 +80,11 @@ Melatonin is known as the sleep hormone, or to some: the ``chemical expression o
 In 2000, a novel Opsin was found in the human eye \citep{provencioNovelHumanOpsin2000}. An opsin is a light-sensitive protein that exists in the visual cells in the eye and is what converts the energy from photons of light into electrical signals that are sent to the brain \citep{terakitaOpsins2005}. It was soon discovered that the action spectrum of this new opsin, malanopsin, did not match any of the action spectra of the known visual cells (rods and cones), implying there was a new cell that we were not yet aware of \citep{thapanActionSpectrumMelatonin2001}.\footnote{
 Interestingly, melanopsiin has been found to be much more similar to invertebrate opsins than they are to visual mammalian opsins \citep{provencioMelanopsinOpsinMelanophores1998}. This, as well as the fact almost all animals produce melatonin, shows it is a truly ancient part of our biology \citep{daviesEvolutionFunctionMelanopsin2014}.
 } 
-This cell was found to be the intrinsically photosensitive Retinal Ganglion Cell (ipRGC) \citep{bersonPhototransductionRetinalGanglion2002}, the signals from which are what keeps the SCN entrained, but to not contribute to conscious vision \citep{bersonPhototransductionGanglioncellPhotoreceptors2007}. This explains why some blind people have circadian rhythms that can be entrained with light, as discussed in the review by \citet{allenCircadianRhythmsBlind2019}.
+This cell was found to be the \acrfull{iprgc} \citep{bersonPhototransductionRetinalGanglion2002}, the signals from which are what keeps the SCN entrained, but to not contribute to conscious vision \citep{bersonPhototransductionGanglioncellPhotoreceptors2007}. This explains why some blind people have circadian rhythms that can be entrained with light, as discussed in the review by \citet{allenCircadianRhythmsBlind2019}.
 
 \subsection{Blue Light}
 
-It has been established that light is of great significance in circadian regulation, and that ``moderate illumination'' of around 500 lux \citep{laaksoOnehourExposureModerate1993}, or even ``room light'' of less than 200 lux \citep{gooleyExposureRoomLight2011} can cause a phase shift in the circadian rhythm. Furthermore, due to the action spectrum of the ipRGCs, \gls{BlueLight} causes a much larger effect than longer-wavelength light \citep{lockleyHighSensitivityHuman2003}.
+It has been established that light is of great significance in circadian regulation, and that ``moderate illumination'' of around 500 lux \citep{laaksoOnehourExposureModerate1993}, or even ``room light'' of less than 200 lux \citep{gooleyExposureRoomLight2011} can cause a phase shift in the circadian rhythm. Furthermore, due to the action spectrum of the \acrshort{iprgc}, \gls{BlueLight} causes a much larger effect than longer-wavelength light \citep{lockleyHighSensitivityHuman2003}.
 
 The effect of \gls{BlueLight} is so potent, that even one second pulses of \gls{BlueLight} through closed eyelids are enough to suppress melatonin production \citep{figueiroTrainBlueLight2013}, thereby dramatically affecting sleep. 
 
