--- a/documents/Interim Proposal/Main/interim.bib
+++ b/documents/Interim Proposal/Main/interim.bib
@@ -973,6 +973,23 @@
   number = {1}
 }
 
+@article{kruseSpectralImageProcessing1993,
+  title = {The Spectral Image Processing System ({{SIPS}})\textemdash Interactive Visualization and Analysis of Imaging Spectrometer Data},
+  author = {Kruse, F. A. and Lefkoff, A. B. and Boardman, J. W. and Heidebrecht, K. B. and Shapiro, A. T. and Barloon, P. J. and Goetz, A. F. H.},
+  year = {1993},
+  month = may,
+  volume = {44},
+  pages = {145--163},
+  issn = {0034-4257},
+  doi = {10.1016/0034-4257(93)90013-N},
+  abstract = {The Center for the Study of Earth from Space (CSES) at the University of Colorado, Boulder, has developed a prototype interactive software system called the Spectral Image Processing System (SIPS) using IDL (the Interactive Data Language) on UNIX-based workstations. SIPS is designed to take advantage of the combination of high spectral resolution and spatial data presentation unique to imaging spectrometers. It streamlines analysis of these data by allowing scientists to rapidly interact with entire datasets. SIPS provides visualization tools for rapid exploratory analysis and numerical tools for quantitative modeling. The user interface is X-Windows-based, user friendly, and provides ``point and click'' operation. SIPS is being used for multidisciplinary research concentrating on use of physically based analysis methods to enhance scientific results from imaging spectrometer data. The objective of this continuing effort is to develop operational techniques for quantitative analysis of imaging spectrometer data and to make them available to the scientific community prior to the launch of imaging spectrometer satellite systems such as the Earth Observing System (EOS) High Resolution Imaging Spectrometer (HIRIS).},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\E98Q2NGF\\003442579390013N.html},
+  journal = {Remote Sensing of Environment},
+  language = {en},
+  number = {2},
+  series = {Airbone {{Imaging Spectrometry}}}
+}
+
 @article{kuseDamagePhotoreceptorderivedCells2014,
   title = {Damage of Photoreceptor-Derived Cells in Culture Induced by Light Emitting Diode-Derived Blue Light},
   author = {Kuse, Yoshiki and Ogawa, Kenjiro and Tsuruma, Kazuhiro and Shimazawa, Masamitsu and Hara, Hideaki},
@@ -1078,6 +1095,24 @@
   pmid = {7434030}
 }
 
+@article{liCRICAM02UCSColourRendering2012,
+  title = {The {{CRI}}-{{CAM02UCS}} Colour Rendering Index},
+  author = {Li, Cheng and Luo, M. Ronnier and Li, Changjun and Cui, Guihua},
+  year = {2012},
+  volume = {37},
+  pages = {160--167},
+  issn = {1520-6378},
+  doi = {10.1002/col.20682},
+  abstract = {A new colour rendering index, CRI-CAM02UCS, is proposed. It predicts visual results more accurately than the CIE CIR-Ra. It includes two components necessary for predicting colour rendering in one metric: a chromatic adaptation transform and uniform colour space based on the CIE recommended colour appearance model, CIECAM02. The new index gave the same ranks as those of CIE-Ra in the six lamps tested regardless the sample sets used. It was also found that the methods based on the size of colour gamut did not agree with those based on the test-sample method. \textcopyright{} 2011 Wiley Periodicals, Inc. Col Res Appl, 2012},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/col.20682},
+  copyright = {Copyright \textcopyright{} 2011 Wiley Periodicals, Inc.},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\T3HFE68H\\col.html},
+  journal = {Color Research \& Application},
+  keywords = {CAM02-UCS,CIE-Ra,CIECAM02,CRI-CAM02UCS},
+  language = {en},
+  number = {3}
+}
+
 @article{lieBreastCancerNight2006,
   title = {Breast {{Cancer}} and {{Night Work}} among {{Norwegian Nurses}}},
   author = {Lie, Jenny-Anne S. and Roessink, Jolanta and Kj{\ae}rheim, Kristina},
@@ -1148,6 +1183,22 @@
   publisher = {{Metaphysics Research Lab, Stanford University}},
   abstract = {The pineal gland is a tiny organ in the center of the brain thatplayed an important role in Descartes' philosophy. He regarded it asthe principal seat of the soul and the place in which all our thoughtsare formed. In this entry, we discuss Descartes' views concerning thepineal gland. We also put them into a historical context by describingthe main theories about the functions of the pineal gland that wereproposed before and after his time.},
   file = {C\:\\Users\\Nick\\Zotero\\storage\\MQFMMM3D\\pineal-gland.html}
+}
+
+@article{lucasMeasuringUsingLight2014,
+  title = {Measuring and Using Light in the Melanopsin Age},
+  author = {Lucas, Robert J. and Peirson, Stuart N. and Berson, David M. and Brown, Timothy M. and Cooper, Howard M. and Czeisler, Charles A. and Figueiro, Mariana G. and Gamlin, Paul D. and Lockley, Steven W. and O'Hagan, John B. and Price, Luke L. A. and Provencio, Ignacio and Skene, Debra J. and Brainard, George C.},
+  year = {2014},
+  month = jan,
+  volume = {37},
+  pages = {1--9},
+  issn = {0166-2236},
+  doi = {10.1016/j.tins.2013.10.004},
+  abstract = {Light is a potent stimulus for regulating circadian, hormonal, and behavioral systems. In addition, light therapy is effective for certain affective disorders, sleep problems, and circadian rhythm disruption. These biological and behavioral effects of light are influenced by a distinct photoreceptor in the eye, melanopsin-containing intrinsically photosensitive retinal ganglion cells (ipRGCs), in addition to conventional rods and cones. We summarize the neurophysiology of this newly described sensory pathway and consider implications for the measurement, production, and application of light. A new light-measurement strategy taking account of the complex photoreceptive inputs to these non-visual responses is proposed for use by researchers, and simple suggestions for artificial/architectural lighting are provided for regulatory authorities, lighting manufacturers, designers, and engineers.},
+  file = {C\:\\Users\\Nick\\Zotero\\storage\\U598UVUL\\Lucas et al. - 2014 - Measuring and using light in the melanopsin age.pdf;C\:\\Users\\Nick\\Zotero\\storage\\VT6BI7VT\\S0166223613001975.html},
+  journal = {Trends in Neurosciences},
+  language = {en},
+  number = {1}
 }
 
 @article{magnussonTreatmentSeasonalAffective1991,
@@ -1813,12 +1864,6 @@
   journal = {Journal of the Korean housing association},
   language = {kor},
   number = {4}
-}
-
-@misc{SustainableDevelopmentGoals,
-  title = {The {{Sustainable Development Goals Report}} 2016.Pdf},
-  file = {C\:\\Users\\Nick\\Zotero\\storage\\5GLI25QE\\The Sustainable Development Goals Report 2016.pdf},
-  howpublished = {https://unstats.un.org/sdgs/report/2016/The\%20Sustainable\%20Development\%20Goals\%20Report\%202016.pdf}
 }
 
 @article{terakitaOpsins2005,
